--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,6 +4,6 @@
   text-align: center;
   font-style: italic;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  color:rgb(7, 110, 7); 
+  color: black;
 
 }
